[package]
name = "imgui-glium-renderer"
version = "0.1.0-pre-glutin"
edition = "2018"
authors = ["Joonas Javanainen <joonas.javanainen@gmail.com>", "imgui-rs contributors"]
description = "Glium renderer for the imgui crate"
homepage = "https://github.com/Gekkio/imgui-rs"
repository = "https://github.com/Gekkio/imgui-rs"
license = "MIT/Apache-2.0"
categories = ["gui", "rendering"]

[badges]
travis-ci = { repository = "Gekkio/imgui-rs" }

[dependencies]
glium = { version = "0.26.0-alpha", default-features = false, path="../../glium" }
imgui = { version = "0.1.0-pre-glutin", path = "../", features = ["glium"] }
